修改数据库链接

--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
         <dependency>
             <groupId>com.xm.pdd</groupId>
             <artifactId>pop-sdk</artifactId>
-            <classifier>all</classifier>
+<!--            <classifier>all</classifier>-->
             <version>1.10.53</version>
         </dependency>
 
