--- a/src/main/resources/application-dev-demo.yml
+++ b/src/main/resources/application-dev-demo.yml
@@ -4,9 +4,9 @@ server:
 #数据库相关配置
 spring:
   datasource:
-    url: jdbc:mysql://数据库IP:端口/cps_mall?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
-    username:
-    password:
+    url: jdbc:mysql://8.140.253.179:3306/cps_mall?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
+    username: root
+    password: Password@123
 
 #rabbitmq相关配置
   rabbitmq:
